--- a/EntregableApp/templates/EntregableApp/hermano.html
+++ b/EntregableApp/templates/EntregableApp/hermano.html
@@ -1,2 +1,8 @@
 {% extends 'EntregableApp/base.html' %}
 {% load static %}
+
+{% block subtitulopag %}
+<p class="lead">Página de Hermanos</p>
+{% endblock %}
+
+<!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
