--- a/EntregableApp/templates/EntregableApp/base.html
+++ b/EntregableApp/templates/EntregableApp/base.html
@@ -17,13 +17,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="#page-top">Inicio</a>
+                <a class="navbar-brand" href="{% url 'inicio'%}">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'papa'%}">Papa</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'mama'%}">Mama</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'hermano'%}">Hermanos</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,9 +31,12 @@
         <!-- Header-->
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
-                <h1 class="fw-bolder">Welcome to Scrolling Nav</h1>
-                <p class="lead">A functional Bootstrap 5 boilerplate for one page scrolling websites</p>
-                <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
+                <h1 class="fw-bolder">Nuestra página de familia</h1>
+
+                {% block subtitulopag %}
+
+                {% endblock %}
+
             </div>
         </header>
         <!-- Footer-->
