--- a/EntregableApp/templates/EntregableApp/inicio.html
+++ b/EntregableApp/templates/EntregableApp/inicio.html
@@ -1,2 +1,6 @@
 {% extends 'EntregableApp/base.html' %}
 {% load static %}
+
+{% block subtitulopag %}
+<p class="lead">Página de inicio</p>
+{% endblock %}
