--- a/EntregableApp/templates/EntregableApp/base.html
+++ b/EntregableApp/templates/EntregableApp/base.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Scrolling Nav - Start Bootstrap Template</title>
+        <title>Página de Familia</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'EntregableApp/css/styles.css' %}" rel="stylesheet" />
@@ -39,6 +39,10 @@
 
             </div>
         </header>
+        <!-- Info Modificable-->
+        {% block contenidomodificable %}
+
+        {% endblock %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
