--- a/EntregableApp/templates/EntregableApp/hermano.html
+++ b/EntregableApp/templates/EntregableApp/hermano.html
@@ -3,6 +3,7 @@
 
 {% block subtitulopag %}
 <p class="lead">Página de Hermanos</p>
-{% endblock %}
 
-<!-- <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
+<a class="btn btn-lg btn-light" href="{% url 'Hermanoformulario'%}">Agregar un hermano</a>
+
+{% endblock %}
