--- a/EntregableApp/templates/EntregableApp/hermano.html
+++ b/EntregableApp/templates/EntregableApp/hermano.html
@@ -4,6 +4,6 @@
 {% block subtitulopag %}
 <p class="lead">Página de Hermanos</p>
 
-<a class="btn btn-lg btn-light" href="{% url 'Hermanoformulario'%}">Agregar un hermano</a>
+<a class="btn btn-lg btn-light" href="{% url 'Hermanoformulario' %}">Agregar un Hermano</a>
 
 {% endblock %}
