--- a/EntregableApp/templates/EntregableApp/mama.html
+++ b/EntregableApp/templates/EntregableApp/mama.html
@@ -3,4 +3,5 @@
 
 {% block subtitulopag %}
 <p class="lead">Página de Mamá</p>
+<a class="btn btn-lg btn-light" href="{% url 'Mamaformulario' %}">Agregar una Mamá</a>
 {% endblock %}
