--- a/EntregableApp/templates/EntregableApp/papa.html
+++ b/EntregableApp/templates/EntregableApp/papa.html
@@ -3,4 +3,6 @@
 
 {% block subtitulopag %}
 <p class="lead">Página de Papá</p>
+
+<a class="btn btn-lg btn-light" href="{% url 'Papaformulario' %}">Agregar un Papá</a>
 {% endblock %}
